Fix spacing bug

--- a/app/assets/stylesheets/marketing.css.scss
+++ b/app/assets/stylesheets/marketing.css.scss
@@ -77,7 +77,7 @@ $varbox: #D83415;
     width: 100%;
   }
   .down {
-    height: 220px;
+    height: 210px;
     margin-top: 20px;
   }
 }
